Enhance game logic and AI behavior;
update player configuration options.
Improved `playCard` function to handle invalid moves,
refined AI strategies for better decision-making, and added UI elements for player count and AI selection.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "test": "jest",
+    "test": "jest --verbose",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
